fixed report visibility

--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -7,7 +7,7 @@
     color:#6a11cb;
     cursor: pointer;
     transition: text-shadow 0.3s ease;
-mix-blend-mode: #6a11cb
+    mix-blend-mode: #6a11cb
 }
 
 .headerButtonStylesText { /*Subheading text*/
@@ -19,7 +19,7 @@ mix-blend-mode: #6a11cb
     transition: text-shadow 0.3s ease;
     margin-top: 10px;
     margin-right: 10px;
-z-index: 5;
+    z-index: 5;
 }
 
 .headerButtonStylesText:hover { /*Header text hover*/
@@ -94,7 +94,7 @@ z-index: 5;
     margin-bottom: 50px;
     border-radius: 10px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: white;
     color: #6a11cb;
     border: none;
     transition: all 0.3s ease;
@@ -106,7 +106,8 @@ z-index: 5;
     transform: translateY(-10px);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     color: #6a11cb;
-    background-color:rgba(255, 255, 255, 0.8);
+    background-color: white;
+    /*rgba(255, 255, 255, 0.8);*/
 }
 
 .containerReportPage {
@@ -124,7 +125,7 @@ z-index: 5;
     background-size: 100% 100%; 
     background-position: center;
     background-repeat: no-repeat;
-z-index: 5;
+    z-index: 5;
 }
 
 .pageTop { /*Area under header*/
@@ -132,7 +133,7 @@ z-index: 5;
     background-image: linear-gradient(to right, #6a11cb, #0d122a);
     color: white;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-z-index: 0;
+    z-index: 0;
    
 }
 
@@ -141,7 +142,7 @@ z-index: 0;
     background-image: linear-gradient(to right, #6a11cb, #0d122a);
     color: white;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-z-index: 100;
+    z-index: 100;
 }
 
 .customButton { /*Quiz buttons*/
@@ -219,7 +220,7 @@ position: relative;
     justify-content: space-between; 
     align-items: center; 
     padding: 20px; 
-position: relative;
+    position: relative;
     z-index: 100;
 }
 
@@ -350,7 +351,7 @@ margin-left: 20px;
     width: 100%;
 }
 
-.pageBodyReportPages { /*contains quiz buttons*/
+.pageBodyReportPages {
     padding: 20px;
     background-image: linear-gradient(to right, #6a11cb, #0d122a);
     color: white;
